--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,11 @@ body {
 
 main {
   background-color: #f5f5f5;
-  height: 400px;
-  max-width: 800px;
   border-radius: 5px;
-  padding: 20px;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -40,22 +38,27 @@ main {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
-  margin-bottom: 40px;
+  margin: 40px;
 }
 
 .die-face {
-  height: 50px;
-  width: 50px;
+  height: 3.5rem;
+  width: 3.5rem;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.25rem;
 }
 
 .die-num {
-  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #5035ff;
 }
 
 .roll-dice {
@@ -68,6 +71,7 @@ main {
   font-size: 1.2rem;
   font-family: 'Karla', sans-serif;
   cursor: pointer;
+  margin-bottom: 0.75rem;
 }
 
 .roll-dice:focus {
@@ -76,4 +80,36 @@ main {
 
 .roll-dice:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+.track-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  gap: 2em;
+  width: 100%;
+  font-size: 1.1rem;
+}
+.scores-cointainer,
+.times-cointainer {
+  text-align: center;
+  padding: 10px;
+  width: 100%;
+}
+
+.times-cointainer > *,
+.scores-cointainer > * {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.current-time,
+.current-score {
+  color: #5035ff;
+}
+
+.record-time,
+.record-score {
+  color: #ccb013;
 }
